Added Night Music

--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -317,6 +317,7 @@
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\..\..\Downloads\FM-Victory.wav" />
+    <Media Include="..\Downloads\night.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
